update cmdb hostgroup
