# docs/swagger.yaml
@@ -81,6 +81,20 @@ definitions:
     type: object
   dto.Empty:
     type: object
+  dto.HostGroupCreateOrUpdateInput:
+    properties:
+      groupName:
+        type: string
+      instanceID:
+        type: string
+      sort:
+        minimum: 1
+        type: integer
+    required:
+    - groupName
+    - instanceID
+    - sort
+    type: object
   dto.IdsReq:
     properties:
       ids:
@@ -302,6 +316,74 @@ definitions:
       msg:
         type: string
       real_err:
+        type: string
+    type: object
+  model.CMDBHost:
+    properties:
+      address:
+        type: string
+      cmdbHostGroupID:
+        type: integer
+      created_at:
+        type: string
+      groupName:
+        type: string
+      hostPassword:
+        type: string
+      hostUserName:
+        type: string
+      id:
+        type: integer
+      instanceID:
+        type: string
+      name:
+        type: string
+      permissionID:
+        type: integer
+      port:
+        type: integer
+      privateKey:
+        type: string
+      protocol:
+        type: integer
+      secretID:
+        type: integer
+      secretType:
+        type: integer
+      status:
+        type: integer
+      updated_at:
+        type: string
+      useSecret:
+        type: integer
+    type: object
+  model.CMDBHostGroup:
+    properties:
+      children:
+        items:
+          $ref: '#/definitions/model.CMDBHostGroup'
+        type: array
+      created_at:
+        type: string
+      groupName:
+        type: string
+      hostNum:
+        type: integer
+      hosts:
+        items:
+          $ref: '#/definitions/model.CMDBHost'
+        type: array
+      id:
+        type: integer
+      instanceID:
+        type: string
+      parentId:
+        description: 上层主机组
+        type: string
+      sort:
+        description: 排序
+        type: integer
+      updated_at:
         type: string
     type: object
   model.SysApi:
@@ -548,7 +630,7 @@ paths:
   /api/authority/createAuthority:
     post:
       parameters:
-      - description: 空
+      - description: 角色信息
         in: body
         name: data
         required: true
@@ -574,7 +656,7 @@ paths:
   /api/authority/getAuthorityList:
     get:
       parameters:
-      - description: 空
+      - description: 分页信息
         in: body
         name: data
         required: true
@@ -632,7 +714,7 @@ paths:
   /api/authority/updateAuthority:
     put:
       parameters:
-      - description: 空
+      - description: 角色信息
         in: body
         name: data
         required: true
@@ -683,6 +765,170 @@ paths:
       summary: 通过角色更新接口权限
       tags:
       - Authority
+  /api/cmdb/:instanceID/deleteHostGroup:
+    delete:
+      description: 删除主机组
+      operationId: /api/cmdb/:instanceID/deleteHostGroup
+      parameters:
+      - description: 空
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.Empty'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 更新主机组
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 删除主机组
+      tags:
+      - HostGroup
+  /api/cmdb/createHostGroup:
+    post:
+      consumes:
+      - application/json
+      description: 创建主机组
+      operationId: /api/cmdb/createHostGroup
+      parameters:
+      - description: 主机组信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.HostGroupCreateOrUpdateInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 创建主机组
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 创建主机组
+      tags:
+      - HostGroup
+  /api/cmdb/createSubHostGroup:
+    post:
+      consumes:
+      - application/json
+      description: 创建子主机组
+      operationId: /api/cmdb/createSubHostGroup
+      parameters:
+      - description: 子主机组信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.HostGroupCreateOrUpdateInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 创建子主机组
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 创建子主机组
+      tags:
+      - HostGroup
+  /api/cmdb/getHostGroupList:
+    get:
+      description: 获取主机组列表
+      operationId: /api/cmdb/getHostGroupList
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取主机组列表
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.CMDBHostGroup'
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取主机组列表
+      tags:
+      - HostGroup
+  /api/cmdb/getHostGroupTree:
+    get:
+      description: 获取主机组树
+      operationId: /api/cmdb/getHostGroupTree
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取主机组树
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.CMDBHostGroup'
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取主机组树
+      tags:
+      - HostGroup
+  /api/cmdb/updateHostGroup:
+    put:
+      consumes:
+      - application/json
+      description: 更新主机组
+      operationId: /api/cmdb/updateHostGroup
+      parameters:
+      - description: 主机组信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.HostGroupCreateOrUpdateInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 更新主机组
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 更新主机组
+      tags:
+      - HostGroup
   /api/k8s/Secret/del:
     delete:
       consumes:
